# websocket-bench

./: .gitignore  README.md  rust-toolchain
.github/: dependabot.yml
.github/workflows/: deploy.yml  tests.yml
evaluator/: Cargo.toml  build.rs
evaluator/assets/: go.Dockerfile  javascript.Dockerfile  rust.Dockerfile
evaluator/src/: bench_stats.rs  data.rs  grpc.rs  http2_framework.rs  language.rs  macros.rs  main.rs  protocol.rs  report_line.rs  web_socket.rs
protocols/grpc/tonic/: Cargo.toml  build.rs
protocols/grpc/tonic/src/: grpc_bindings.rs  main.rs
protocols/grpc/wtx/: Cargo.toml  build.rs  grpc.proto
protocols/grpc/wtx/src/: main.rs
protocols/http2-framework/actix/: Cargo.toml
protocols/http2-framework/actix/src/: main.rs
protocols/http2-framework/axum/: Cargo.toml
protocols/http2-framework/axum/src/: main.rs
protocols/http2-framework/wtx/: Cargo.toml
protocols/http2-framework/wtx/src/: main.rs
protocols/web-socket/fastwebsockets/: Cargo.toml
protocols/web-socket/fastwebsockets/src/: main.rs
protocols/web-socket/ratchet/: Cargo.toml
protocols/web-socket/ratchet/src/: main.rs
protocols/web-socket/soketto/: Cargo.toml
protocols/web-socket/soketto/src/: main.rs
protocols/web-socket/tokio-tungstenite/: Cargo.toml
protocols/web-socket/tokio-tungstenite/src/: main.rs
protocols/web-socket/tokio-websockets/: Cargo.toml
protocols/web-socket/tokio-websockets/src/: main.rs
protocols/web-socket/ws-tool/: Cargo.toml
protocols/web-socket/ws-tool-sync/: Cargo.toml
protocols/web-socket/ws-tool-sync/src/: main.rs
protocols/web-socket/ws-tool/src/: main.rs
protocols/web-socket/wtx/: Cargo.toml
protocols/web-socket/wtx/src/: main.rs
site/: .prettierrc  eslint.config.js  package-lock.json  package.json  postcss.config.js  svelte.config.js  vite.config.ts
site/src/: app.html
site/src/lib/: BenchStats.ts  Csv.ts  Utils.ts  types.ts
site/src/routes/: +page.svelte  +page.ts  FirstPlacesChart.svelte  Header.svelte  ManyDatesChart.svelte
