[build-dependencies]
pb-rs = { default-features = false, version = "0.10" }

[dependencies]
flate2 = { default-features = false, features = ["rust_backend"], version = "1.0" }
quick-protobuf = { default-features = false, version = "0.8" }
serde = { default-features = false, features = ["derive"], version = "1.0" }
serde_json = { default-features = false, features = ["alloc"], version = "1.0" }
tokio = { default-features = false, features = ["fs", "io-std", "macros", "process", "rt-multi-thread"], version = "1.0" }
wtx = { default-features = false, features = ["grpc", "http-client-framework", "optimization", "pool", "quick-protobuf", "serde_json", "tokio", "tokio-rustls", "webpki-roots", "web-socket-handshake"], version = "0.17" }

[features]
all-protocols = ["web-socket"]
deploy = []
grpc = []
http2-framework = []
web-socket = []

[package]
edition = "2021"
name = "wtx-bench"
publish = false
version = "0.0.0"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
panic = 'abort'
rpath = false
strip = "symbols"