[build-dependencies]
tonic-build = { default-features = false, features = ["prost"], version = "0.12" }

[dependencies]
prost = { default-features = false, features = ["derive"], version = "0.13" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
tonic = { default-features = false, features = ["transport", "codegen", "prost"], version = "0.12" }

[package]
edition = "2021"
name = "tonic"
publish = false
version = "0.0.0"
