[build-dependencies]
pb-rs = { default-features = false, version = "0.10" }

[dependencies]
quick-protobuf = { default-features = false, version = "0.8" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
wtx = { default-features = false, features = ["grpc", "optimization", "quick-protobuf", "tokio"], version = "0.17" }

[package]
edition = "2021"
name = "wtx"
publish = false
version = "0.0.0"
