[dependencies]
actix-web = { default-features = false, features = ["http2"], version = "4.0" }
serde = { default-features = false, features = ["derive"], version = "1.0" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }

[package]
name = "actix"
version = "0.1.0"
edition = "2021"
publish = false
