[dependencies]
serde = { default-features = false, features = ["derive"], version = "1.0" }
tokio = { default-features = false, features = ["macros", "net", "rt-multi-thread"], version = "1.0" }
wtx = { default-features = false, features = ["http-server-framework", "optimization", "serde_json", "tokio"], version = "0.17" }

[package]
edition = "2021"
name = "wtx"
publish = false
version = "0.0.0"
