[dependencies]
futures-util = { default-features = false, features = ["sink"], version = "0.3" }
tokio = { default-features = false, features = ["macros", "net", "rt-multi-thread"], version = "1.40.0" }
tokio-websockets = { default-features = false, features = ["sha1_smol", "server", "simd"], version = "0.8" }

[package]
edition = "2021"
name = "tokio-websockets"
publish = false
version = "0.0.0"
